--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
   }
   
   #random-image {
@@ -19,7 +19,7 @@
     box-shadow: 2px 2px 5px #888888;
     cursor: pointer;
     outline: none;
-    align-self: flex-start;
+    align-items: flex-end;
   }
   
   button i {
